--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply rounded-md border bg-blue-400 px-2 text-gray-200 active:scale-[.97] active:opacity-[.97] disabled:scale-100 disabled:bg-gray-500 disabled:opacity-100;
+  }
+}
